--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="page-container">
         <header>
             <ul>
-                <li><a href="#">Header Logo</a></li>
+                <li class="h-logo"><a href="#">Header Logo</a></li>
                 <li><a href="#">link one</a></li>
                 <li><a href="#">link two</a></li>
                 <li><a href="#">link three</a></li>
             </ul>
         </header>
-        <div class="content-1">
+        <div class="first">
             <div>
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
