--- a/index.html
+++ b/index.html
@@ -10,46 +10,64 @@
     <div class="page-container">
         <header>
             <ul>
-                <li class="h-logo"><a href="#">Header Logo</a></li>
-                <li><a href="#">link one</a></li>
-                <li><a href="#">link two</a></li>
-                <li><a href="#">link three</a></li>
+                <div class="left">
+                    <li class="h-logo"><a href="#">Header Logo</a></li>
+                </div>
+                <div class="right">
+                    <li><a href="#">link one</a></li>
+                    <li><a href="#">link two</a></li>
+                    <li><a href="#">link three</a></li>
+                </div>
             </ul>
         </header>
         <div class="first">
+            <div class="wrapper">
             <div>
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button>Sign up</button>
             </div>
-            <img src="#" alt="Place holder image">
+            <img src="first-placeholder.png" alt="Place holder image">
+        </div>
         </div>
 
         <div class="content-1">
-            <h2>Some random information.</h2>
-            <div>
-                <img src="#" alt="inline place holder image">
+            <h2 class="padding-20"><strong>Some random information.</strong></h2>
+            <div class="flex justify-center gap padding">
+            <div class="flex justify-center wrap width">
+                <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <img src="#" alt="inline place holder image">
+            <div class="flex justify-center wrap width">
+                <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <img src="#" alt="inline place holder image">
+            <div class="flex justify-center wrap width">
+                <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <img src="#" alt="inline place holder image">
+            <div class="flex justify-center wrap width">
+                <div class="square"></div>
                 <p>this is some subtext under an illustration or image</p>
+            </div>
             </div>
         </div>
-        <div class="content-1">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it who know? All I know is that it looks nice.<p>-Thor, God of Thunder</p></div>
-        <div class="content-1">
-            <div><h3>Call to action! It's time!</h3><p>Sign up for our product by clicking tha tbutton right over there!</p></div>
-            <button>Sign up</button>
+        <div class="content-quote">
+            <div class="wrapper-quote">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it who know? All I know is that it looks nice.</p>
+                <p>-Thor, God of Thunder</p>
+            </div>
         </div>
-        <footer>Copyright © The Odin Project 2021</footer>
+        <div class="call-container">
+            <div class="call-box padding-20">
+                <div>
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <footer class="padding-20">Copyright © The Odin Project 2021</footer>
     </div>
 
 </body>
